# OmniControl

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
benchmarks/: LOCAL_TEST_MATRIX.md  local_closed_source_macos.json  local_closed_source_windows.json
docs/: BACKGROUND_FIRST_POLICY.md  EXECUTION_STRATEGY.md  GENERIC_BACKGROUND_TRANSPORTS.md  SIDECAR_CONTROL_PLANE_UPDATE.md
knowledge/: kb.json
omnicontrol/: __init__.py  __main__.py  benchmark.py  cli.py  models.py
omnicontrol/adapters/: __init__.py  catalog.py
omnicontrol/detector/: __init__.py  capability_detector.py
omnicontrol/emitters/: __init__.py  scaffold.py
omnicontrol/ir/: __init__.py  manifest.py
omnicontrol/planner/: __init__.py  adapter_selector.py  language_selector.py
omnicontrol/runtime/: __init__.py  adaptive_startup.py  contracts.py  evidence.py  invocation.py  kb.py  live_smoke.py  paths.py  (+8 more)
tests/: TEST.md  test_adaptive_startup.py  test_cdp_target_helpers.py  test_core.py  test_full_e2e.py  test_invocation.py  test_kb.py  test_live_smoke_helpers.py  test_live_smoke_macos.py  test_orchestrator.py  test_pivots.py  test_remediation.py  test_runtime_evidence.py  test_runtime_paths.py  test_runtime_registry.py  test_staging.py  test_strategy.py  test_transports.py  test_windows_ipc.py
(+46 files in other folders)
