[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "OmniControl"
version = "0.1.0"
description = "Capability-first control-plane scaffolder for software automation."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Codex" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
omnicontrol = "omnicontrol.cli:main"

[tool.setuptools.packages.find]
include = ["omnicontrol*"]

[tool.setuptools.package-data]
"omnicontrol.runtime" = ["scripts/*"]
